--- a/Swift App/Base.lproj/Main.storyboard
+++ b/Swift App/Base.lproj/Main.storyboard
@@ -24,23 +24,48 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w2w-gi-iYO">
-                                <rect key="frame" x="115" y="166" width="146" height="30"/>
+                                <rect key="frame" x="115" y="166" width="146" height="52.5"/>
                                 <state key="normal" title="Let's Build the Future"/>
                                 <connections>
                                     <action selector="buttonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3eP-yC-KNE"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CvL-Mz-TKr">
+                                <rect key="frame" x="87.5" y="318" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="6Ld-b2-Bfh"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jkz-KG-8iO">
+                                <rect key="frame" x="88" y="368" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="g2l-vg-jeX"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ZvQ-xp-63l" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1DB-Mh-ywn"/>
                             <constraint firstItem="w2w-gi-iYO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8A3-HO-8KV"/>
+                            <constraint firstItem="jkz-KG-8iO" firstAttribute="top" secondItem="CvL-Mz-TKr" secondAttribute="bottom" constant="20" id="GkL-BQ-91T"/>
                             <constraint firstItem="ZvQ-xp-63l" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="T6U-qS-OCC"/>
+                            <constraint firstItem="jkz-KG-8iO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WYh-cr-jO5"/>
+                            <constraint firstItem="CvL-Mz-TKr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="af0-f1-gIV"/>
+                            <constraint firstItem="CvL-Mz-TKr" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ezL-F7-7g0"/>
+                            <constraint firstItem="CvL-Mz-TKr" firstAttribute="top" secondItem="w2w-gi-iYO" secondAttribute="bottom" constant="100" id="jFh-4w-zPR"/>
                             <constraint firstItem="w2w-gi-iYO" firstAttribute="top" secondItem="ZvQ-xp-63l" secondAttribute="bottom" constant="25" id="pyp-Vc-NXz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="text1" destination="CvL-Mz-TKr" id="pZf-xX-kip"/>
+                        <outlet property="text2" destination="jkz-KG-8iO" id="21U-3s-2WZ"/>
                         <outlet property="theLabel" destination="ZvQ-xp-63l" id="f6Z-um-9yT"/>
                     </connections>
                 </viewController>
